fix: making pointermove work on mobile

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -10,6 +10,7 @@
   overflow: hidden;
   z-index: 1;
   /* top:50; */
+  touch-action: none;
 }
 
   
