--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,7 +40,9 @@ body{
 }
 
 .colorPickerWrapper{
-    width: 90%;
+    width: 100%;
+    height: 100%;
+
 }
 
 .downloadButton{
@@ -56,4 +58,12 @@ body{
 
 .downloadButton:hover{
     background-color: #4829b8;
+}
+
+@media screen and (max-width: 768px ) {
+    
+    .downloadButton{
+        width: 50%;
+    }
+
 }
